# APex3

./: AIplayer.cpp  AIplayer.h  Attack.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Console.cpp  Console.h  ConsoleController.cpp  ConsoleController.h  Counter.cpp  Counter.h  Directions.cpp  Display.h  Game.cpp  Game.h  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Path.cpp  Path.h  Player.cpp  Player.h  PlayerController.h  StandardAttack.cpp  StandardAttack.h  StdGameLogic.cpp  StdGameLogic.h  VectorExterminator.h  info.txt  main.cpp  makefile
Tests/: testClass.h
client/: configFileClient  makefile
client/include/: AIConsole.h  Attack.h  ClientCommandsManager.h  ClientErrorCommand.h  ClientJoinCommand.h  ClientListGamesCommand.h  ClientStartCommand.h  Command.h  Console.h  ConsoleController.h  Directions.h  Display.h  Game.h  HumanPlayer.h  ListGamesCommand.h  Player.h  PlayerController.h  RemoteConsole.h  RemoteInputController.h  RemoteOutputController.h  TypesOf.h  VectorExterminator.h
client/src/: AIConsole.cpp  AIplayer.cpp  Board.cpp  Cell.cpp  ClientCommandsManager.cpp  ClientErrorCommand.cpp  ClientJoinCommand.cpp  ClientListGamesCommand.cpp  ClientStartCommand.cpp  Console.cpp  ConsoleController.cpp  Counter.cpp  Directions.cpp  Game.cpp  HumanConsole.cpp  HumanPlayer.cpp  ListGamesCommand.cpp  Path.cpp  Player.cpp  RemoteConsole.cpp  RemoteInputController.cpp  RemoteOutputController.cpp  StandardAttack.cpp  StdGameLogic.cpp  main.cpp
client/test/: AITest.cpp  test_main.cpp
client_files/: Client.cpp  Client.h  main.cpp
exe/: client  configFileServer  server
gtest_src/googletest-master/googlemock/include/gmock/: gmock-generated-matchers.h  gmock-spec-builders.h
gtest_src/googletest-master/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
gtest_src/googletest-master/googlemock/test/: gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_stress_test.cc
gtest_src/googletest-master/googletest/cmake/: internal_utils.cmake
gtest_src/googletest-master/googletest/include/gtest/: gtest-printers.h
gtest_src/googletest-master/googletest/include/gtest/internal/: gtest-port.h
gtest_src/googletest-master/googletest/src/: gtest-internal-inl.h  gtest.cc
gtest_src/googletest-master/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-options_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest_color_test_.cc  gtest_output_test_.cc  gtest_repeat_test.cc  gtest_unittest.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py
gtest_src/googletest-master/googletest/xcode/Scripts/: versiongenerate.py
include/: AIConsole.h  AIplayer.h  Attack.h  Board.h  Cell.h  Console.h  ConsoleController.h  Counter.h  Directions.h  Display.h  Game.h  GameLogic.h  HumanConsole.h  HumanPlayer.h  Path.h  Player.h  PlayerController.h  RemoteConsole.h  RemoteOutputController.h  StandardAttack.h  StdGameLogic.h  TypesOf.h
server/: makefile
server/Untitled Folder/include/: Command.h  CommandsManager.h  StartCommand.h
server/Untitled Folder/src/: CommandsManager.cpp  StartCommand.cpp
server/include/: Cell.h  ClientHandler.h  Command.h  CommandsManager.h  ErrorCommand.h  GameManager.h  GamesHandler.h  JoinCommand.h  ListGamesCommand.h  Server.h  StartCommand.h  Task.h  ThreadPool.h  ThreadsManager.h
server/src/: Cell.cpp  ClientHandler.cpp  CommandsManager.cpp  ErrorCommand.cpp  GameManager.cpp  GamesHandler.cpp  JoinCommand.cpp  ListGamesCommand.cpp  Server.cpp  StartCommand.cpp  ThreadPool.cpp  ThreadsManager.cpp  main.cpp
server_files/: Server.cpp  Server.h  main.cpp
src/: AIConsole.cpp  AIplayer.cpp  Board.cpp  Cell.cpp  Console.cpp  ConsoleController.cpp  Counter.cpp  Directions.cpp  Game.cpp  HumanConsole.cpp  HumanPlayer.cpp  Path.cpp  Player.cpp  RemoteConsole.cpp  RemoteInputController.cpp  RemoteOutputController.cpp  StandardAttack.cpp  StdGameLogic.cpp  main.cpp
test/: AITest.cpp  BoardTest.cpp  StdGameLogicTest.cpp  test_1.cpp  test_main.cpp
